# tsura_website

./: .gitignore  README.md  app.py  pyproject.toml
static/: style.css
templates/: ai_token_assignment.html  base.html  driver_detail.html  elo_list.html  elo_list_heat.html  event_detail.html  hotlapping.html  index.html
